# tarxx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  format.sh  tarxx-example.cpp  tarxx.h
.github/workflows/: build.yml  cmake.yml  cmake_example_with_lz4.yml  cmake_example_without_lz4.yml  example_with_compression.yml  example_with_lz4.yml  example_without_compression.yml  unit_tests.yml  with_compression.yml  with_lz4.yml  without_compression.yml
include/: tarxx.h
tests/: CMakeLists.txt  Dockerfile
tests/component-tests/: CMakeLists.txt  tarxx-example-lz4.cpp  tarxx-example-tar.cpp
tests/unit-tests/: CMakeLists.txt  lz4.cpp  tar.cpp
tests/util/: CMakeLists.txt  util.h
